Day 3 color changer completed updated

--- a/ColorGenerator/index.html
+++ b/ColorGenerator/index.html
@@ -11,11 +11,7 @@
 <body id="body" class="body">
     <div class="container">
         <h1 class="title">Random Colors</h1>
-        <script>
-            let color = ;
-            document.getElementById('username').innerHTML = userName;
-        </script>
-        <h1 class="color" id="color">RGB(33,34,82)</h1>
+        <h1 class="colortxt" id="colortxt">RGB(33,34,82)</h1>
         <button class="btn" id="btn">Change color</button>
     </div>
 </body>
